// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatIntegrationPreferences/> componentDidMount() should initialize the state using the integration passed 1`] = `
Object {
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-in-minutes",
  "emailCaptureEnforcement": "always-required",
  "isInitialized": true,
  "isUpdating": false,
  "preview": "email-capture",
}
`;

exports[`<ChatIntegrationPreferences/> componentDidUpdate() should initialize the state using the integration passed because the state was not initialized yet and the integration passed is not empty 1`] = `
Object {
  "autoResponderEnabled": true,
  "autoResponderReply": "reply-in-minutes",
  "emailCaptureEnforcement": "always-required",
  "isInitialized": true,
  "isUpdating": false,
  "preview": "email-capture",
}
`;

exports[`<ChatIntegrationPreferences/> render() should render buttons in loading state because preferences are being submitted 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        />
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Preferences
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "type": "smooch_inside",
        "meta": Immutable.Map {
          "language": "en-US",
        },
        "decoration": Immutable.Map {
          "main_color": "#789c5d",
          "conversation_color": "#08d123",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="mb-4"
          >
            <h4>
              Email capture
            </h4>
            <p>
              Ask your customers to leave their email before starting a chat
            </p>
            <RadioField
              disabled={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "description": "Leaving your email is optional, everyone can start a conversation. Maximise conversation volume",
                    "label": "Optional",
                    "value": "optional",
                  },
                  Object {
                    "description": "Reduces conversation volume by around 5%",
                    "label": "Required only outside business hours",
                    "value": "required-outside-business-hours",
                  },
                  Object {
                    "description": "Reduces conversation volume by around 30%",
                    "label": "Always required",
                    "value": "always-required",
                  },
                ]
              }
              value="optional"
            />
          </div>
          <div
            className="mb-4"
          >
            <h4>
              Auto-responder
            </h4>
            <div
              className="mb-3 d-flex align-items-center"
            >
              <ToggleButton
                onChange={[Function]}
                value={false}
              />
              <div
                className="ml-2"
              >
                <b>
                  Enable auto-responder
                </b>
              </div>
            </div>
            <div
              className="mb-3"
            >
              <p
                className="text-faded"
              >
                <b>
                  During 
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/business-hours"
                  >
                    Business hours
                  </Link>
                </b>
                , tell customers how fast they can expect a response with an auto-responder:
              </p>
              <RadioField
                disabled={true}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "\\"Thanks for reaching out! Our team will get back to you shortly\\"",
                      "value": "reply-shortly",
                    },
                    Object {
                      "label": "\\"Thanks for reaching out! We typically reply in a few minutes\\"",
                      "value": "reply-in-minutes",
                    },
                    Object {
                      "label": "\\"Thanks for reaching out! We typically reply in a few hours\\"",
                      "value": "reply-in-hours",
                    },
                    Object {
                      "label": "\\"Thanks for reaching out! We typically reply in a day\\"",
                      "value": "reply-in-day",
                    },
                  ]
                }
                value="reply-shortly"
              />
              <p
                className="text-faded"
              >
                This message will be sent in new chat tickets after 30 seconds without replies from an agent.
              </p>
              <p
                className="text-faded"
              >
                <b>
                  Outside 
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/business-hours"
                  >
                    Business hours
                  </Link>
                </b>
                , Gorgias will automatically tell customers when they can expect a response.
              </p>
            </div>
          </div>
          <div>
            <Button
              className="btn-loading"
              color="success"
              disabled={true}
              tag="button"
              type="submit"
            >
              Save changes
            </Button>
          </div>
        </Form>
      </Col>
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          isOnline={true}
          language="en-US"
          mainColor="#789c5d"
          renderFooter={true}
        >
          <OptionalEmailCapture
            conversationColor="#08d123"
            language="en-US"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<ChatIntegrationPreferences/> render() should render the Chat preferences 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        />
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Preferences
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "type": "smooch_inside",
        "meta": Immutable.Map {
          "language": "en-US",
        },
        "decoration": Immutable.Map {
          "main_color": "#789c5d",
          "conversation_color": "#08d123",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="mb-4"
          >
            <h4>
              Email capture
            </h4>
            <p>
              Ask your customers to leave their email before starting a chat
            </p>
            <RadioField
              disabled={false}
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "description": "Leaving your email is optional, everyone can start a conversation. Maximise conversation volume",
                    "label": "Optional",
                    "value": "optional",
                  },
                  Object {
                    "description": "Reduces conversation volume by around 5%",
                    "label": "Required only outside business hours",
                    "value": "required-outside-business-hours",
                  },
                  Object {
                    "description": "Reduces conversation volume by around 30%",
                    "label": "Always required",
                    "value": "always-required",
                  },
                ]
              }
              value="optional"
            />
          </div>
          <div
            className="mb-4"
          >
            <h4>
              Auto-responder
            </h4>
            <div
              className="mb-3 d-flex align-items-center"
            >
              <ToggleButton
                onChange={[Function]}
                value={false}
              />
              <div
                className="ml-2"
              >
                <b>
                  Enable auto-responder
                </b>
              </div>
            </div>
            <div
              className="mb-3"
            >
              <p
                className="text-faded"
              >
                <b>
                  During 
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/business-hours"
                  >
                    Business hours
                  </Link>
                </b>
                , tell customers how fast they can expect a response with an auto-responder:
              </p>
              <RadioField
                disabled={true}
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "\\"Thanks for reaching out! Our team will get back to you shortly\\"",
                      "value": "reply-shortly",
                    },
                    Object {
                      "label": "\\"Thanks for reaching out! We typically reply in a few minutes\\"",
                      "value": "reply-in-minutes",
                    },
                    Object {
                      "label": "\\"Thanks for reaching out! We typically reply in a few hours\\"",
                      "value": "reply-in-hours",
                    },
                    Object {
                      "label": "\\"Thanks for reaching out! We typically reply in a day\\"",
                      "value": "reply-in-day",
                    },
                  ]
                }
                value="reply-shortly"
              />
              <p
                className="text-faded"
              >
                This message will be sent in new chat tickets after 30 seconds without replies from an agent.
              </p>
              <p
                className="text-faded"
              >
                <b>
                  Outside 
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/business-hours"
                  >
                    Business hours
                  </Link>
                </b>
                , Gorgias will automatically tell customers when they can expect a response.
              </p>
            </div>
          </div>
          <div>
            <Button
              className=""
              color="success"
              disabled={false}
              tag="button"
              type="submit"
            >
              Save changes
            </Button>
          </div>
        </Form>
      </Col>
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <ChatIntegrationPreview
          isOnline={true}
          language="en-US"
          mainColor="#789c5d"
          renderFooter={true}
        >
          <OptionalEmailCapture
            conversationColor="#08d123"
            language="en-US"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;
